src/styles/components/_image-library.scss
.image-library {
  h5{
    margin:0;
  }

  .image-library-title{
    position: absolute;
    bottom: 10px;
    left: 10px;
    font-size: 16px;
    text-decoration: none;
    z-index: 200;
  }

  .image-library-title:hover{
    text-decoration: underline;
    cursor: pointer;
  }

  .image-library-toggle{
    position: absolute;
    top:10px;
    right:10px;
  }

  .image-library-close{
    position: absolute;
    top:3px;
    right:10px;
    text-decoration: none;
  }

  .image-library-close:hover{
    cursor: pointer;
  }

  .image-library-content-link{
    position: absolute;
    bottom: 3px;
    right: 10px;
  }

  .image-filter-layer-unselect, .image-filter-layer-select{
    z-index: 100;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
  }

  .image-filter-layer-unselect{
    background: #aaa;
    background-color:rgba(255,255,255,0.8);
  }

  .image-filter-layer-unselect:hover, .image-filter-layer-select{
    cursor: pointer;
    background-color:rgba(32,84,147,0.8);
    color: #ffffff;
  }

  .image-div{
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
  }

  .vertical-align{
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }

  .images-container{
    padding-right:3px;
  }

  .black-border{
    border: 2px solid #000;
  }

  .tri-div{
    position: absolute;
    bottom:-1px;
  }

  .tri-down {
    position: relative;
    z-index: 1000;
  }

  /* Required for Down Triangle */
  .tri-down:before, .tri-down:after {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    border-style: solid;
    border-color: transparent;
    border-bottom: 0;
  }

  /* Fill */
  .tri-down:after {
    bottom: -15px;
    left: 30%;
    border-top-color: #000;
    border-width: 15px;
  }

  .no-tri-down{
    position: relative;
    background: #fff;
    border-bottom: 1px solid #fff;
  }

  .item-border-unselect{
    border: 2px #aeb0b5 solid;
  }

  .item-border-unselect:hover, .item-border-select{
    border: 2px #000 solid;
  }

  .white-text{
    color: #ffffff;
  }

  .detail-div,.detail-div-large{
    display:block;
    overflow: hidden;
    float: none;
  }

  .detail-div-large{
    margin-right: 8.33%;
  }

  .image-library-wrap:before{
    content: "";
    display: block;
    padding-top: 100%;
  }

}

